<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ufo.tiago.moods.MoodsActivity">

    <ImageButton
        android:id="@+id/btn_mood_3"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/mood_sad"
        app:layout_constraintStart_toStartOf="@+id/btn_mood_1"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

    <ImageButton
        android:id="@+id/btn_mood_4"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/mood_angry"
        app:layout_constraintEnd_toEndOf="@+id/btn_mood_2"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

    <ImageButton
        android:id="@+id/btn_mood_5"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/mood_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <ImageButton
        android:id="@+id/btn_mood_2"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/mood_normal"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/moods_recyclerview" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:text="@string/feeling"
        android:textColor="@color/textTitle"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageButton
        android:id="@+id/back_img"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/left_arrow_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/continue_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/orange_selector"
        android:text="@string/next"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/moods_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/btn_mood_1"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/mood_happy"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/moods_recyclerview" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/textTitle"
        android:text="@string/mood_1"
        app:layout_constraintEnd_toEndOf="@+id/btn_mood_1"
        app:layout_constraintStart_toStartOf="@+id/btn_mood_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_mood_1" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mood_2"
        android:textColor="@color/textTitle"
        app:layout_constraintEnd_toEndOf="@+id/btn_mood_2"
        app:layout_constraintStart_toStartOf="@+id/btn_mood_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_mood_2" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mood_3"
        android:textColor="@color/textTitle"
        app:layout_constraintEnd_toEndOf="@+id/btn_mood_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_mood_5"
        app:layout_constraintTop_toBottomOf="@+id/btn_mood_5" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mood_4"
        android:textColor="@color/textTitle"
        app:layout_constraintEnd_toEndOf="@+id/btn_mood_3"
        app:layout_constraintStart_toStartOf="@+id/btn_mood_3"
        app:layout_constraintTop_toBottomOf="@+id/btn_mood_3" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mood_5"
        android:textColor="@color/textTitle"
        app:layout_constraintEnd_toEndOf="@+id/btn_mood_4"
        app:layout_constraintStart_toStartOf="@+id/btn_mood_4"
        app:layout_constraintTop_toBottomOf="@+id/btn_mood_4" />

</android.support.constraint.ConstraintLayout>
